[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameHUDRelated/LeftSidePanel/SynergyInfoPanel/Pics/Tier_None.png" type="Texture" id=1]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/trajanpro/trajanpro-regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://GameHUDRelated/LeftSidePanel/SynergyInfoPanel/SingleSynergyDisplayer.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[node name="SingleSynergyDisplayer" type="MarginContainer"]
margin_right = 37.0
margin_bottom = 14.0
size_flags_vertical = 4
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 37.0
margin_bottom = 14.0
mouse_filter = 2
custom_constants/separation = 0

[node name="TierIconPanel" type="MarginContainer" parent="HBoxContainer"]
margin_right = 14.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TierIcon" type="TextureRect" parent="HBoxContainer/TierIconPanel"]
margin_right = 14.0
margin_bottom = 14.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="SpecialMarginer" type="MarginContainer" parent="HBoxContainer/TierIconPanel"]
margin_right = 14.0
margin_bottom = 14.0
mouse_filter = 2
custom_constants/margin_top = 1

[node name="TierNumberLabel" type="Label" parent="HBoxContainer/TierIconPanel/SpecialMarginer"]
margin_top = 3.0
margin_right = 14.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "IV"
align = 1
valign = 1

[node name="SynergyIconPanel" type="MarginContainer" parent="HBoxContainer"]
margin_left = 14.0
margin_right = 28.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SynergyIcon" type="TextureRect" parent="HBoxContainer/SynergyIconPanel"]
margin_right = 14.0
margin_bottom = 14.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="SynergyInfoLabelPanel" type="MarginContainer" parent="HBoxContainer"]
margin_left = 28.0
margin_right = 37.0
margin_bottom = 14.0
mouse_filter = 2
custom_constants/margin_left = 5
custom_constants/margin_bottom = -2

[node name="SynergyInfoLabel" type="Label" parent="HBoxContainer/SynergyInfoLabelPanel"]
margin_left = 5.0
margin_top = 3.0
margin_right = 9.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
text = "t"
valign = 1
[connection signal="mouse_entered" from="." to="." method="_on_SingleSynergyDisplayer_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SingleSynergyDisplayer_mouse_exited"]
